sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:5: error: '=' expected but ';' found.
	var valeur ; 
                   ^AlgShellSort:6: error: '=' expected but ';' found.
	var j ;
              ^